Fix overflow-x while animating

--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
   box-sizing: border-box;
   margin: 0;
 }
-
+html,
+body {
+  overflow-x: hidden;
+}
 .login-button-pc {
   display: none;
 }
